- maven-compiler-pluginのバージョンを3.11.0に修正 - maven-compiler-pluginのsource/target設定をプロパティで置き換え - sqlite-jdbcのバージョンを3.41.2.2に修正 - commons-lang3のバージョンを修正